[gd_scene load_steps=24 format=3 uid="uid://ceoqtlfuehsvd"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_osaxm"]
[ext_resource type="PackedScene" uid="uid://pu46mkcjdswb" path="res://scenes/esc_menu/esc_menu.tscn" id="2_pam5e"]
[ext_resource type="PackedScene" uid="uid://b8opucxucl032" path="res://world/world.tscn" id="2_unfjm"]
[ext_resource type="Script" path="res://cards/deck/deck.gd" id="4_nj60x"]
[ext_resource type="PackedScene" uid="uid://b2ihtbgfe0r4a" path="res://scenes/main/region_preview/region_preview.tscn" id="4_yf74u"]
[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="5_5yrco"]
[ext_resource type="PackedScene" uid="uid://drjdjumbfief5" path="res://cards/deck/deck_view.tscn" id="6_7d42u"]
[ext_resource type="Texture2D" uid="uid://vv0nl83x0ldq" path="res://assets/icons/forward.png" id="6_7usvn"]
[ext_resource type="Texture2D" uid="uid://c212io5yyck3x" path="res://cards/deck/cards_diagonal_flip.png" id="6_rhuyp"]
[ext_resource type="Texture2D" uid="uid://daiva0ld8x5xg" path="res://cards/deck/cards_diagonal.png" id="7_6flvt"]
[ext_resource type="Texture2D" uid="uid://c21vky8im5mlv" path="res://cards/deck/cards_diagonal_flip_hover.png" id="7_47vxr"]
[ext_resource type="Script" path="res://scenes/main/Message.gd" id="7_y3mfw"]
[ext_resource type="Texture2D" uid="uid://bkvqblt1epgp1" path="res://cards/deck/cards_diagonal_hover.png" id="9_sxlud"]
[ext_resource type="Texture2D" uid="uid://n7uttbbffjfx" path="res://assets/icons/faith_bg.png" id="13_mjhrf"]
[ext_resource type="Script" path="res://scenes/main/active_effects/active_effects.gd" id="14_emvi1"]
[ext_resource type="Shader" path="res://faith.gdshader" id="14_pw6iu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bre21"]
shader = ExtResource("14_pw6iu")
shader_parameter/line_color = Color(0.49, 0.0931, 0.0931, 1)
shader_parameter/max_line_thickness = 6.0
shader_parameter/speed = 1.0
shader_parameter/offset = 0.45

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7yohb"]
shader = ExtResource("14_pw6iu")
shader_parameter/line_color = Color(0.262745, 0.580392, 0.368627, 1)
shader_parameter/max_line_thickness = 6.0
shader_parameter/speed = 1.5
shader_parameter/offset = 1.4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ox3a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwln7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u2eju"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vyug2"]
shader = ExtResource("14_pw6iu")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/max_line_thickness = 5.0
shader_parameter/speed = 2.0
shader_parameter/offset = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ensp2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_osaxm")

[node name="EscMenu" parent="." instance=ExtResource("2_pam5e")]

[node name="World" parent="." instance=ExtResource("2_unfjm")]

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 2

[node name="RegionPreview" parent="UI" instance=ExtResource("4_yf74u")]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -153.0
offset_bottom = 78.0
grow_horizontal = 0

[node name="Deck" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("5_5yrco")
script = ExtResource("4_nj60x")

[node name="DiscardPileButton" type="TextureButton" parent="UI/Deck"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_bre21")
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -177.0
offset_top = -100.0
offset_right = -50.0
offset_bottom = -67.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Discard Pile"
theme = ExtResource("5_5yrco")
texture_normal = ExtResource("6_rhuyp")
texture_hover = ExtResource("7_47vxr")
stretch_mode = 5

[node name="DiscardPileLabel" type="Label" parent="UI/Deck/DiscardPileButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "9"
horizontal_alignment = 2

[node name="DrawPileButton" type="TextureButton" parent="UI/Deck"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_7yohb")
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -100.0
offset_right = 156.0
offset_bottom = -67.0
grow_vertical = 0
tooltip_text = "Draw Pile"
theme = ExtResource("5_5yrco")
texture_normal = ExtResource("7_6flvt")
texture_hover = ExtResource("9_sxlud")
stretch_mode = 5

[node name="DrawPileLabel" type="Label" parent="UI/Deck/DrawPileButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "4"

[node name="DeckView" parent="UI/Deck" instance=ExtResource("6_7d42u")]
unique_name_in_owner = true

[node name="Bar" type="PanelContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_5yrco")

[node name="MarginContainer" type="MarginContainer" parent="UI/Bar"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Bar/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Bar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FastForwardButton" type="Button" parent="UI/Bar/MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Fast forward"
theme_override_styles/focus = SubResource("StyleBoxEmpty_7ox3a")
toggle_mode = true
icon = ExtResource("6_7usvn")
icon_alignment = 1

[node name="Message" type="Label" parent="UI/Bar/MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("7_y3mfw")

[node name="ResContainer" type="PanelContainer" parent="UI/Bar/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bwln7")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Bar/MarginContainer/HBoxContainer/HBoxContainer/ResContainer"]
layout_mode = 2

[node name="TurnButton" type="Button" parent="UI/Bar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2eju")
text = "End Turn"

[node name="Faith" type="TextureRect" parent="UI"]
material = SubResource("ShaderMaterial_vyug2")
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -344.0
offset_right = 220.0
offset_bottom = -184.0
grow_vertical = 0
theme = ExtResource("5_5yrco")
texture = ExtResource("13_mjhrf")
stretch_mode = 3

[node name="Faith2" type="TextureRect" parent="UI/Faith"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_5yrco")
texture = ExtResource("13_mjhrf")
stretch_mode = 3

[node name="FaithLabel" type="Label" parent="UI/Faith/Faith2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.109804, 0.552941, 0.709804, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "0/3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="UI"]
offset_top = 50.0
offset_right = 140.0
offset_bottom = 320.0
theme = ExtResource("5_5yrco")
theme_override_styles/panel = SubResource("StyleBoxEmpty_ensp2")

[node name="ModsScrollContainer" type="ScrollContainer" parent="UI/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ActiveEffects" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -180.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("5_5yrco")
alignment = 1
script = ExtResource("14_emvi1")

[connection signal="pressed" from="UI/Deck/DiscardPileButton" to="UI/Deck" method="_on_discard_pile_button_pressed"]
[connection signal="pressed" from="UI/Deck/DrawPileButton" to="UI/Deck" method="_on_draw_pile_button_pressed"]
[connection signal="toggled" from="UI/Bar/MarginContainer/HBoxContainer/HBoxContainer/FastForwardButton" to="." method="_on_fast_forward_button_toggled"]
[connection signal="pressed" from="UI/Bar/MarginContainer/HBoxContainer/TurnButton" to="." method="_on_turn_button_pressed"]
